# uzumejs

./: .eslintrc.json  .gitignore  .gitmodules  .prettierignore  LICENSE  README.md  jest.config.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
docker/: Dockerfile
src/: index.ts  uzumejs.ts
tests/: index.test.ts
wasm/: CMakeLists.txt  build.sh
wasm/src/: EstimateF0Bindings.cpp  SpectrogramBindings.cpp  SynthesizeWaveformBindings.cpp  TimeAxisMapBindings.cpp
wasm/src/data/: ContourBindings.cpp  ControlChangeBindings.cpp  LinearTimeAxisMapBindings.cpp  SpectrumBindings.cpp  WaveformBindings.cpp
wasm/src/resources/: post.js  pre.js
wasm/src/spectrogram/: ArraySpectrogramAggregatorBindings.cpp  F0EditedSpectrogramBindings.cpp  GenEditedSpectrogramBindings.cpp  NaiveSpectrogramBindings.cpp  StretchedPartialSpectrogramBindings.cpp  WaveformSpectrogramBindings.cpp
wasm/src/world/: EstimateF0WithDIOBindings.cpp  SynthesizeWaveformWithWORLDBindings.cpp
